--- a/CICD-2/Jenkinsfile
+++ b/CICD-2/Jenkinsfile
@@ -35,7 +35,10 @@ pipeline{
             }
         }
     }
-
-        
+    post {
+        always {
+            sh "docker rmi $IMAGE:$VERSION || true"
+        }
+    }
 
 }
