--- a/CICD-3/Jenkinsfile
+++ b/CICD-3/Jenkinsfile
@@ -66,7 +66,7 @@ pipeline{
             git add k8s/tic-tac-toe-deployment.yml
             git commit -m  "[ci skip] update image tag"
 
-            git push https://${GIT_USER}:${GIT_PASS}@github.com/MAHIRE-7/Tic-Tac-Toe_CICD.git HEAD:main
+            git push https://${GIT_USER}:${GIT_PASS}@github.com/MAHIRE-7/Tic-Tac-Toe_CICD.git HEAD:release
                                                      """
                                                  }
             }
