--- a/CICD-4/Jenkinsfile
+++ b/CICD-4/Jenkinsfile
@@ -16,22 +16,24 @@ pipeline{
 
         // OWASP CVE check
         stage("OWASP Dependency Scan") {
-                steps {
+            steps {
                     catchError(buildResult: 'UNSTABLE', stageResult: 'UNSTABLE') {
-                        withCredentials([string(credentialsId: 'nvd-api-key', variable: 'NVD_KEY')]) {
-                            dependencyCheck(
-                                additionalArguments: """
-                                --scan .
-                                --format HTML
-                                --nvdApiKey ${NVD_KEY}
-                                --data /tmp/odc-data
-                                """,
-                                odcInstallation: 'owasp'
-                            )
+                            withCredentials([string(credentialsId: 'nvd-api-key', variable: 'NVD_KEY')]) {
+                                sh '''
+                                dependency-check.sh \
+                                --scan . \
+                                --format HTML \
+                                --data /tmp/odc-data \
+                                --nvdApiKey "$NVD_KEY" \
+                                --nvdApiDelay 8000 \
+                                --nvdMaxRetryCount 10 \
+                                --disableAssembly
+                                '''
+                            }
                         }
                     }
                 }
-            }
+
 
 
         
