--- a/CICD-4/Jenkinsfile
+++ b/CICD-4/Jenkinsfile
@@ -13,7 +13,7 @@ pipeline{
                 git url: "https://github.com/MAHIRE-7/wordtopdf.git", branch: "main"
             }
         }
-
+/**
         // OWASP CVE check
         stage("OWASP Dependency Scan") {
     steps {
@@ -38,11 +38,14 @@ pipeline{
 
         
         //OWASP Report generation
-        stage("OWASP Report") {
-            steps {
-                archiveArtifacts artifacts: '**/dependency-check-report.html', fingerprint: true
+            stage("OWASP Report") {
+                steps {
+                    archiveArtifacts artifacts: 'owasp-report/dependency-check-report.html', fingerprint: true
+                }
             }
-        }
+
+**/
+
         //SonarQube Scan
          stage("SonarQube Scan") {
             steps {
