--- a/CICD-4/Jenkinsfile
+++ b/CICD-4/Jenkinsfile
@@ -99,29 +99,14 @@ pipeline{
                     '''
             }
         }
-
-        // K8s Tag Update
-        stage("K8S Tag Update"){
-            steps{
-            withCredentials([usernamePassword(credentialsId: 'gitCredentials', 
-                                                 usernameVariable: 'GIT_USER', 
-                                                 passwordVariable: 'GIT_PASS')]){
-                                                     sh""" 
-                                                      echo "Updating Kubernetes manifest with new image tag"
-                                                        
-            git checkout release
-            sed -i 's|image: .*|image: ${IMAGE}:${VERSION}|' k8s/app-deployment.yml
-
-            git config user.email "manodayahire786@gmail.com"
-            git config user.name "Manoday Ahire"
-
-            git add k8s/app-deployment.yml
-            git commit -m  "K8s Image Tag Updated With $IMAGE:$VERSION "
-
-            git push https://${GIT_USER}:${GIT_PASS}@github.com/MAHIRE-7/wordtopdf HEAD:release
-                                                     """
-                                                 }
-            }
-        }
+        stage("Trigger CD") {
+    steps {
+        build job: 'CD-Job',
+              parameters: [
+                string(name: 'IMAGE_TAG', value: "${BUILD_NUMBER}")
+              ]
+    }
+}
+        
         }
     }
