--- a/CICD-5/jenkinsfile
+++ b/CICD-5/jenkinsfile
@@ -29,6 +29,14 @@ pipeline{
             }
         }
 
+        stage("Deploy on K8S"){
+            steps{
+                sh '''
+                kubectl apply -f k8s/
+                '''
+            }
+        }
+
     }
 
 
