--- a/CICD-5/jenkinsfile
+++ b/CICD-5/jenkinsfile
@@ -28,6 +28,28 @@ pipeline{
                 sh "docker rmi $IMAGE:$VERSION"
             }
         }
+        stage("Tag Update"){
+            steps{
+                withCredentials([usernamePassword(credentialsId: 'gitCredentials', 
+                                                 usernameVariable: 'GIT_USER', 
+                                                 passwordVariable: 'GIT_PASS')]){
+                                                     sh""" 
+                                                      echo "Updating Kubernetes manifest with new image tag"
+                                                        
+            
+            sed -i 's|image: .*|image: ${IMAGE}:${VERSION}|' k8s/app-deployment.yml
+
+            git config user.email "manodayahire786@gmail.com"
+            git config user.name "Manoday Ahire"
+
+            git add k8s/app-deployment.yml
+            git commit -m  "K8s Image Tag Updated With $IMAGE:$VERSION "
+
+            git push https://${GIT_USER}:${GIT_PASS}@github.com/MAHIRE-7/expense-tracker-CICD HEAD:main
+                                                     """
+                                                 }
+            }
+        }
 
         stage("Deploy on K8S"){
             steps{
